--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - python >=3.7
     - jinja2
     - click >=6.7
-    - packaging <22.0
+    - packaging
     - pyparsing >=2.0.2
     - sphinx
 
